<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="@dimen/login_rela_marginLeft"
        android:layout_marginRight="@dimen/login_rela_marginRight"
        android:layout_marginTop="@dimen/login_rela_marginTop">

        <TextView
            android:id="@+id/icon_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size"/>

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/icon_user"
            android:inputType="textNoSuggestions"
            android:background="@null"
            android:hint="username"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/icon_user"
            android:background="@color/lightskyblue"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="@dimen/login_rela_marginLeft"
        android:layout_marginRight="@dimen/login_rela_marginRight"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/icon_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/icon_pass"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="password"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal"/>
        <TextView
            android:id="@+id/icon_show"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size_small"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/icon_pass"
            android:background="@color/lightskyblue"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_line_marginLeft"
        android:layout_marginRight="@dimen/login_line_marginRight"
        android:layout_marginTop="@dimen/login_line_marginTop"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <CheckBox
            android:id="@+id/checkBox_password"
            android:padding="0dp"
            android:textSize="13dp"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/check_password"
            android:textColor="@color/gray"
            android:checked="false"/>
        <CheckBox
            android:id="@+id/checkBox_login"
            android:padding="0dp"
            android:textSize="13dp"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/check_login"
            android:textColor="@color/gray"
            android:checked="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_line_marginLeft"
        android:layout_marginRight="@dimen/login_line_marginRight"
        android:layout_marginTop="@dimen/login_line_marginTop"
        android:paddingBottom="1dp"
        android:paddingTop="3dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/register"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_line_marginLeft"
        android:layout_marginRight="@dimen/login_line_marginRight"
        android:layout_marginTop="@dimen/login_line_marginTop"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/login"
        android:background="@color/lightskyblue"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal"/>
</LinearLayout>