<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/mainViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="0dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/icon_home"
                android:layout_width="wrap_content"
                android:layout_margin="0dp"
                android:layout_height="@dimen/index_icon_height"
                android:text="@string/home"
                android:textSize="@dimen/index_icon_textSize"
                android:textColor="#89baff"
                />
            <TextView
                android:id="@+id/item_home"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/index_text_height"
                android:text="首页"
                android:textColor="#89baff"
                android:textSize="@dimen/index_text_textSize"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dingdan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/icon_message"
                android:layout_width="wrap_content"
                android:layout_margin="0dp"
                android:layout_height="@dimen/index_icon_height"
                android:text="@string/message"
                android:textSize="@dimen/index_icon_textSize"
                android:textColor="@color/gray"
                />
            <TextView
                android:id="@+id/item_message"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/index_text_height"
                android:text="订单"
                android:textColor="@color/gray"
                android:textSize="@dimen/index_text_textSize"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/icon_cart"
                android:layout_width="wrap_content"
                android:layout_margin="0dp"
                android:layout_height="@dimen/index_icon_height"
                android:text="@string/cart"
                android:textSize="@dimen/index_icon_textSize"
                android:textColor="@color/gray"
                />
            <TextView
                android:id="@+id/item_cart"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/index_text_height"
                android:text="购物车"
                android:textColor="@color/gray"
                android:textSize="@dimen/index_text_textSize"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/icon_mine"
                android:layout_width="wrap_content"
                android:layout_margin="0dp"
                android:layout_height="@dimen/index_icon_height"
                android:text="@string/mine"
                android:textSize="@dimen/index_icon_textSize"
                android:textColor="@color/gray"
                />
            <TextView
                android:id="@+id/item_mine"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/index_text_height"
                android:text="我的"
                android:textColor="@color/gray"
                android:textSize="@dimen/index_text_textSize"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>