<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lightskyblue"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/snow"
            android:textSize="25dp"
            tools:ignore="InvalidId" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:text="注册界面"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="@dimen/login_rela_marginLeft"
        android:layout_marginRight="@dimen/login_rela_marginRight"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_user"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/register_font"/>
        <EditText
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/username"
            android:background="@null"
            android:hint="username"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/username"
            android:background="@color/lightskyblue"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="@dimen/login_rela_marginLeft"
        android:layout_marginRight="@dimen/login_rela_marginRight"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/password"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_pass"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/register_font"/>
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/password"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="password"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal"/>

        <TextView
            android:id="@+id/register_show"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size_small"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/password"
            android:background="@color/lightskyblue"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="@dimen/login_rela_marginLeft"
        android:layout_marginRight="@dimen/login_rela_marginRight"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/repassword"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_repass"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/register_font"/>
        <EditText
            android:id="@+id/register_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/repassword"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="repassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal"/>
        <TextView
            android:id="@+id/register_show2"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size_small"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/repassword"
            android:background="@color/lightskyblue"/>
    </RelativeLayout>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_line_marginLeft"
        android:layout_marginRight="@dimen/login_line_marginRight"
        android:layout_marginTop="@dimen/register_btn"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/btn_register"
        android:background="@color/lightskyblue"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal"/>
</LinearLayout>